# pivot-lang

./: .drone.yml  .gitattributes  .gitignore  .gitmodules  .nojekyll  1.txt  404.html  About.html  CONTRIBUTING-CN.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Kagari.toml  LICENSE  Makefile  README.md  alloc-aarch64.ll  alloc-jit-aarch64.ll  alloc-jit-x64.ll  alloc-x64.ll  alloc.ll  book.yaml  bors.toml  build.rs  chapter_1.html  codecov.yml  dev-prepare.html  index.html  naive_coro.md  nginx.conf  performance.html  plc.json  plc.scoop  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  setup-llvm.sh  testCode.txt
.cargo/: config.toml
.circleci/: config.yml
.devcontainer/: devcontainer.json  first-run-notice.txt
.github/: FUNDING.yml
.github/workflows/: bench.yml  book.yml  brew_release.yml  docker_dev.yml  gpt_review.yml  npmpkg.yml  release.yml  test.yml  wasm.yml
add_symbol/: Cargo.toml
add_symbol/src/: lib.rs
add_symbol/src/add_symbol_macro/src/: lib.rs
add_symbol_macro/: Cargo.toml
add_symbol_macro/src/: lib.rs
blogs/: aboutpl.html  gc_for_beginner.html  index.html  lsp_and_salsa.html  performance_optimization.html
book/: Dockerfile  book.toml  book.yaml  nginx.conf
book/src/: About.md  CONTRIBUTING-CN.md  SUMMARY.md  dev-prepare.md  performance.md
compiler/: ast.html  flow.html  index.html  parser.html
compiler_theory/: index.html  top-down_parsing.html
deb/: apt.yaml
deb/DEBIAN/: control  postinst
immix/: 1.txt  Cargo.toml  README.md  build.rs
immix/benches/: immix_bench.rs  immix_stress_bench.rs
immix/bindeps/: Cargo.toml  README.md  build.rs
immix/llvm/: CMakeLists.txt  gcpass.cpp  memory_manager.cpp  plimmix.cpp  plimmix_pass.cpp  plimmixprinter.cpp  pljit.cpp  stripRelocationPass.cpp
immix/src/: bigobj.rs  block.rs  c_api.rs  collector.rs  consts.rs  global_allocator.rs  lib.rs  macros.rs  mmap.rs  object.rs  shadow_stack.rs
immix/src/allocator/: big_obj_allocator.rs  global_allocator.rs  mod.rs  thread_local_allocator.rs
immix/src/collector/: tests.rs
immix/src/llvm_pass/: mod.rs
immix/src/llvm_stackmap/: mod.rs
internal_macro/: Cargo.toml  README.md
internal_macro/src/: lib.rs
internal_macro/src/add_symbol_macro/: Cargo.toml
internal_macro/src/add_symbol_macro/src/: lib.rs
internal_macro/src/comment_macro/: Cargo.toml
internal_macro/src/comment_macro/src/: lib.rs
internal_macro/src/fmt_macro/: Cargo.toml
internal_macro/src/fmt_macro/src/: lib.rs
internal_macro/src/node_macro/: Cargo.toml
internal_macro/src/node_macro/src/: lib.rs
internal_macro/src/range_macro/: Cargo.toml
internal_macro/src/range_macro/src/: lib.rs
internal_macro/src/test_parser_macro/: Cargo.toml
internal_macro/src/test_parser_macro/src/: lib.rs
kagari/: Cargo.toml
kagari/src/: lib.rs
lsp/: design.html  diagnostic.html  index.html
pl_linker/: Cargo.toml  build.rs
pl_linker/src/: lib.rs  linker.rs
planglib/core/: Kagari.toml  __private.pi  builtin.pi  coro.pi  dtoa.pi  eq.pi  gc.pi  hash.pi  ord.pi  panic.pi  process.pi  string.pi
planglib/std/: Kagari.toml  __private.pi  buf.pi  chan.pi  err.pi  future.pi  io.pi  iter.pi  libc.pi  libuv.pi  math.pi  mutex.pi  rand.pi  slice.pi  stdbuiltin.pi  string.pi  task.pi  thread.pi  time.pi  userrand.pi
range_marco/: Cargo.toml
range_marco/src/: lib.rs
references/: array.html  basic.html  closure.html  deconstruct.html  generic.html  immix.html  index.html  interface.html  macro.html  method.html  module.html  stackmap.html  tuple.html  union.html
references/operator/: index.html  tyops.html
src/: db.rs  jar.rs  lib.rs  main.rs  version.rs
src/ast/: README.md  accumulators.rs  builder.rs  compiler.rs  ctx.rs  diag.rs  error.rs  fmt.rs  gcapi.rs  jit_config.rs  macros.rs  mod.rs  node.rs  pass.rs  plmod.rs  pltype.rs  range.rs  references.rs  test.rs  test_diag.expect  test_lsp_diag.txt  test_lsp_diag_win.txt  tokens.rs  traits.rs
src/flow/: display.rs  mod.rs  test.rs
src/inference/: mod.rs
src/lexer/: lexer.rs  mod.rs  pos.rs  types.rs
src/lsp/: config.rs  diagnostics.rs  dispatcher.rs  fake_thread_pool.rs  helpers.rs  lspserver.rs  main.rs  mem_docs.rs  mod.rs  semantic_tokens.rs  text.rs  wasm.rs
src/nomparser/: README.md  array.rs  cast.rs  comment.rs  constval.rs  control.rs  error.rs  expression.rs  function.rs  grammar.ebnf  helper.rs  identifier.rs  implement.rs  macro_parse.rs  macros.rs  mod.rs  pkg.rs  program.rs  statement.rs  string_literal.rs  structure.rs  types.rs  union.rs
src/parser/: math.rs  mod.rs
src/repl/: completer.rs  editor.rs  mod.rs  repl_cmd.rs  test.rs
src/utils/: README.md  mod.rs  plc_new.rs  read_config.rs  tabs.rs  test_symbol.rs
systemlib/: eva.html  gc.html  immix.html  index.html  planglib.html  stackmap.html  vm.html
test/: Kagari.toml  main.pi  mod1.pi  mod2.pi  test_completion.pi  tmod.pi  tmod1.pi  tmod2.pi
test/arr_bounds/: Kagari.toml  main.pi
test/fmt/: test_fmt.pi
test/fmt_windows/: Kagari.toml  test_fmt.pi
test/gcbench/: Kagari.toml  README.md  main.pi
test/lsp/: Kagari.toml  mod.pi  mod2.pi  test_completion.pi  trait1.pi
test/lsp_diag/: Kagari.toml  m1.pi  m2.pi  match_diag.pi  test_diag.pi  trait_diag.pi
test/lsp_incremental/: Kagari.toml  main.pi  module1.pi
test/project2/: Kagari.toml  main.pi
test/sub/: mod.pi
test/sub2/: Kagari.toml  main.pi
test/tail/: Kagari.toml  main.pi
test/test/: _hashtable.pi  _io.pi  _match.pi  arr.pi  closure.pi  compiletime_reflection.pi  constant.pi  deconstruct.pi  fixed_point.pi  flow.pi  fntype.pi  future_test.pi  futuretest.pi  generic.pi  global.pi  ifel.pi  inference.pi  iter.pi  list.pi  macros.pi  map.pi  method.pi  module.pi  multi_trait.pi  multi_trait_A.pi  (+15 more)
tutorial/: basicproject.html  index.html  installation.html  vscsupport.html
vm/: Cargo.toml  README.md  build.rs  dso_handle.c
vm/benches/: simple_gc_bench.rs
vm/src/: compiler_rt.rs  lib.rs
vm/src/gc/: _simple_gc.rs  color3.rs  mod.rs
vm/src/libcwrap/: mod.rs
vm/src/logger/: mod.rs
vm/src/mutex/: mod.rs
vm/src/time/: mod.rs
(+115 files in other folders)
