[package]
name = "pivot-lang"
version = "0.1.0"
edition = "2021"
authors = ["The pivot-lang Authors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
indexmap = "1.9.2"
lazy_static = "1.4.0"
paste = "1.0"
llvm-sys = "140"
internal_macro = { path = "./internal_macro" }
pl_linker = { path = "./pl_linker" }
vm = { path = "./vm", optional = true, features = ["jit"] }
nom_locate = "4.0.0"
rowan = "0.15.10"
dissimilar = "1.0.5"
stderrlog = "0.5.4"
log = "0.4"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
serde = "1.0.145"
lsp-types = { branch = "master", features = ["proposed"], git = "https://github.com/Pivot-Studio/lsp-types" }
lsp-server = "0.6.0"
serde_json = "1.0.85"
rustc-hash = "1.1.0"
crossbeam-channel = "0.5.6"
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa", branch = "master" }
enum_dispatch = "0.3.8"
threadpool = "1.8.1"
dunce = "1.0.3"
toml = "0.5.9"
ariadne = "0.1.5"
dyn-fmt = "0.3.0"
[dependencies.nom]
version = "7"
features = ["alloc"]

[features]
default = ["jit"]
jit = ["vm"]

[[bin]]
name = "plc"
path = "src/main.rs"

[workspace]
members = [
    "internal_macro",
    "vm",
    "pl_linker",
]

