[package]
name = "pivot-lang"
version = "0.1.0"
edition = "2021"
authors = ["The pivot-lang Authors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.1", features = ["llvm14-0", "no-libffi-linking"] }
indexmap = "1.9"
lazy_static = "1.4"
paste = "1.0"
llvm-sys = "140"
internal_macro = { path = "./internal_macro" }
pl_linker = { path = "./pl_linker" }
vm = { path = "./vm", optional = true, features = ["jit"] }
immix = { path = "./immix", features = ["llvm_gc_plugin", "llvm_stackmap"] }
nom_locate = "4.0"
rowan = "0.15"
dissimilar = "1.0"
stderrlog = "0.5"
log = "0.4"
clap = { version = "4.1", features = ["derive"] }
colored = "2.0"
serde = "1.0"
lsp-types = { branch = "master", features = ["proposed"], git = "https://github.com/Pivot-Studio/lsp-types" }
lsp-server = "0.7"
serde_json = "1.0"
rustc-hash = "1.1"
crossbeam-channel = "0.5"
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa", branch = "master" }
enum_dispatch = "0.3"
threadpool = "1.8"
dunce = "1.0"
toml = "0.7"
ariadne = "0.1"
dyn-fmt = "0.3"
petgraph = "0.6"
kagari = { path = "./kagari" }
indicatif = "0.17"
parking_lot = "0.12"

[dependencies.nom]
version = "7"
features = ["alloc"]



[features]
default = ["static"]
jit = ["vm"]
static = ["immix/auto_gc"]

[[bin]]
name = "plc"
path = "src/main.rs"

[workspace]
members = [
    "internal_macro",
    "vm",
    "pl_linker",
    "immix",
    "kagari",
]

[profile.release]
lto = "fat"
opt-level = 3

[profile.bench]
opt-level = 3
# debug = true
debug-assertions = false
overflow-checks = false
lto = "fat"
#panic = 'unwind' # This setting is always ignored.
incremental = true
codegen-units = 1
# rpath = true