[package]
name = "pivot-lang"
version = "0.1.1"
edition = "2021"

authors = ["The pivot-lang Authors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", optional = true, features = ["llvm16-0", "no-libffi-linking"] }
llvm-sys = { version = "160", optional = true }
pl_linker = { path = "./pl_linker", optional = true }
immix = { path = "./immix", optional = true, default-features = false, features = ["llvm_gc_plugin", "llvm_stackmap","auto_gc", "madv_dontneed"] }
vm = { path = "./vm", optional = true, features = ["jit"] }
indexmap = "1.9"
linked-hash-map = "0.5.6"
lazy_static = "1.4"
paste = "1.0"
internal_macro = { path = "./internal_macro", default-features = false }
nom_locate = "4.0"
rowan = "0.15"
dissimilar = "1.0"
stderrlog = "0.5"
log = "0.4"
clap = { version = "4.4", features = ["derive", "string"] }
colored = "2.0"
serde = "1.0"
lsp-types = { branch = "master", features = ["proposed"], git = "https://github.com/Pivot-Studio/lsp-types" }
lsp-server = "0.7"
serde_json = "1.0"
rustc-hash = "1.1"
crossbeam-channel = "0.5"
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa", branch = "master" }
enum_dispatch = "0.3"
threadpool = {version = "1.8", optional = true}
dunce = "1.0"
toml = "0.7"
ariadne = {version = "0.3", features = []}
dyn-fmt = "0.3"
petgraph = "0.6"
kagari = { path = "./kagari" }
indicatif = "0.17"
parking_lot = "0.12"
derivative = "2.2"
console = "0.15"
anstyle = "1.0"
regex = "1.9"
ena = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
include_dir = "0.7"


[dependencies.nom]
version = "7"
features = ["alloc"]


[[bin]]
name = "plc"
path = "src/main.rs"

[lib]
name = "plclib"
path = "src/lib.rs"
crate-type = ["cdylib"]


[features]
default = ["thread", "llvm", "jit"]
jit = ["vm", "internal_macro/jit", "llvm"]
llvm = ["inkwell", "llvm-sys", "immix", "pl_linker"]
thread = ["threadpool"]



[workspace]
members = [
    "internal_macro",
    "vm",
    "pl_linker",
    "immix",
    "kagari",
]

[profile.release]
lto = "fat"
opt-level = 3
debug = "line-tables-only"

[profile.bench]
opt-level = 3
# debug = true
debug-assertions = false
overflow-checks = false
lto = "fat"
#panic = 'unwind' # This setting is always ignored.
incremental = true
codegen-units = 1
# rpath = true


[dev-dependencies]
expect-test = "1.4.1"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

