[package]
name = "immix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-enum = "0.5"
libc = "0.2"
parking_lot = "0.12"
rustc-hash = "1.1"
lazy_static = "1.4"
vector-map = "1.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "immix_bench"
harness = false


[features]
default = ["madv_dontneed"]
madv_free = []
madv_dontneed = []
zero_init = []


[profile.release]
lto = "fat"
opt-level = 3

