[package]
name = "immix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-enum = "0.5"
libc = "0.2"
parking_lot = "0.12"
rustc-hash = "1.1"
lazy_static = "1.4"
vector-map = "1.0"
llvm-plugin = { version = "0.3", features = ["llvm14-0"] }
backtrace = "0.3"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"
bindeps = { path = "./bindeps" }

[[bench]]
name = "immix_bench"
harness = false

[[bench]]
name = "immix_stress_bench"
harness = false

[features]
default = ["madv_dontneed", "llvm_stackmap"]
madv_free = []
madv_dontneed = []
zero_init = []
shadow_stack = []
llvm_stackmap = []
llvm_pass = []
llvm_gc_plugin = []


[build-dependencies]
cmake = "0.1"


