[package]
name = "internal_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1"
llvm-sys = { version = "140", optional = true }
[dependencies.add_symbol_macro]
path = "src/add_symbol_macro"
[dependencies.range_macro]
path = "src/range_macro"
[dependencies.fmt_macro]
path = "src/fmt_macro"
[dependencies.comment_macro]
path = "src/comment_macro"
[dependencies.test_parser_macro]
path = "src/test_parser_macro"
[dependencies.node_macro]
path = "src/node_macro"

[features]
default = ["jit"]
jit = ["llvm-sys"]
static = []