[package]
name = "pl_linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lld_rs = { version = "140.0.0", default-features = false, git="https://github.com/Pivot-Studio/lld-rs.git", branch="main" }
thiserror = "1.0.40"
mun_target = { git="https://github.com/mun-lang/mun.git" }
once_cell = { version = "1.4.0" }
parking_lot = { version = "0.12.0", default-features = false }


[lib]
name = "pl_linker"
path = "src/lib.rs"
