[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internal_macro = { path = "../internal_macro",default-features = false }
backtrace = "0.3"
immix = { path = "../immix", features = ["llvm_stackmap", "auto_gc"] }
libc = { version = "0.2", optional = true }
env_logger = "0.9"

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[lib]
name = "vm"
path = "src/lib.rs"
crate-type = ["staticlib", "lib", "cdylib"]

[features]
default = ["static", "immix"]
jit = ["internal_macro/jit"]
static = ["internal_macro/static"]
immix = ["immix/zero_init"]
simple_gc = ["libc"]

[[bench]]
name = "simple_gc_bench"
harness = false

