[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internal_macro = { path = "../internal_macro",default-features = false }
backtrace = "0.3"
immix = { path = "../immix", default-features = false, features = ["llvm_stackmap", "auto_gc", "madv_dontneed"] }
# env_logger = "0.10"
log = { version = "0.4", features = ["std"] }
libc = "0.2"
bytecount = "0.6.3"

[dev-dependencies]
rand = "0.8"

[lib]
name = "vm"
path = "src/lib.rs"
crate-type = ["staticlib", "lib", "cdylib"]

[features]
default = ["static", "immix"]
jit = ["internal_macro/jit"]
static = ["internal_macro/static"]
immix = ["immix/zero_init"]
