[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internal_macro = { path = "../internal_macro",default-features = false }
backtrace = "0.3"
immix = { path = "../immix", default-features = false, features = ["llvm_stackmap", "auto_gc", "madv_dontneed", "conservative_stack_scan", "c-api", "gc_profile"] }
# env_logger = "0.10"
log = { version = "0.4", features = ["std"] }
libc = "0.2"
bytecount = "0.6.3"
context = "3.0.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincrypt"] }

[dev-dependencies]
rand = "0.8"
vm = { path = ".", features = ["unittest"] }

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[lib]
name = "vm"
path = "src/lib.rs"
crate-type = ["staticlib", "lib", "cdylib"]

[features]
default = ["static", "immix", "nolog", "jitdylib"]
jitdylib = []
static = ["internal_macro/static"]
immix = []
nolog = ["log/release_max_level_off"]
unittest = []
